src/test/ui/rfc-2093-infer-outlives/multiple-regions.stderr
error[E0491]: in type `&'a &'b T`, reference has a longer lifetime than the data it references
  --> $DIR/multiple-regions.rs:15:5
   |
LL |     x: &'a &'b T //~ ERROR reference has a longer lifetime than the data it references [E0491]
   |     ^^^^^^^^^^^^
   |
note: the pointer is valid for the lifetime 'a as defined on the struct at 14:1
  --> $DIR/multiple-regions.rs:14:1
   |
LL | struct Foo<'a,'b,T> {
   | ^^^^^^^^^^^^^^^^^^^
note: but the referenced data is only valid for the lifetime 'b as defined on the struct at 14:1
  --> $DIR/multiple-regions.rs:14:1
   |
LL | struct Foo<'a,'b,T> {
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0491`.
